Table employee {
  id bigint [primary key, increment]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  phone_number varchar(15)
  role_id bigint [not null]
  avatar_filename varchar(255)
  notifications_enabled bit(1)
  reset_token varchar(36)
  reset_token_expiry datetime(6)
}

Table roles {
  id bigint [primary key, increment]
  name enum('HOUSEKEEPER', 'MAINTENANCE', 'MANAGER', 'RECEPTIONIST') [not null]
}

Table rooms {
  id bigint [primary key, increment]
  room_number varchar(10) [not null]
  floor int [not null]
  bed_count int [not null]
  price_per_night decimal(10,2) [not null]
  status enum('AVAILABLE', 'OCCUPIED', 'OUT_OF_SERVICE') [not null]
}

Table reservations {
  id bigint [primary key, increment]
  start_date date [not null]
  end_date date [not null]
  status enum('ACTIVE', 'CANCELLED', 'COMPLETED') [not null] // Zaktualizowano ENUM
  special_requests text
  modified_at datetime(6)
  catering bit(1) [not null]
  guest_first_name varchar(255)
  guest_last_name varchar(255)
  guest_pesel varchar(255)
  guest_phone varchar(255)
  invoice_id bigint [unique]
}

Table reservation_rooms {
  id bigint [primary key, increment]
  reservation_id bigint [not null]
  room_id bigint [not null]
  guest_count int [not null]
}

Table maintenance_requests {
  id bigint [primary key, increment]
  request_date datetime(6) [not null]
  description text
  room_id bigint
  requester_id bigint [not null]
  assignee_id bigint
  status enum('COMPLETED', 'IN_PROGRESS', 'PENDING') [not null]
  service_summary text
  completion_date datetime(6)
}

Table housekeeping_tasks {
  id bigint [primary key, increment]
  employee_id bigint [not null]
  room_id bigint
  request_date datetime(6) [not null]
  completion_date datetime(6)
  status enum('COMPLETED', 'DECLINED', 'IN_PROGRESS', 'PENDING') [not null]
  description text
}

Table invoices {
  id bigint [primary key, increment]
  issue_date date [not null]
  pdf_file varchar(255)
  company_nip varchar(20)
  company_name varchar(100)
  company_address varchar(255) 
  company_street varchar(100)
  company_building_no varchar(20)
  company_postal_code varchar(20) 
  company_city varchar(100)
  company_country varchar(100) 
}

Table reports {
  id bigint [primary key, increment]
  report_file varchar(255)
  created_at datetime(6)
  report_type enum('EMPLOYEE_STATISTICS', 'GENERAL_REPORT') [not null]
  created_by bigint [not null]
}

// Relationships
Ref: employee.role_id > roles.id [delete: no action]

Ref: reservations.invoice_id - invoices.id [delete: no action] 

Ref: reservation_rooms.reservation_id > reservations.id [delete: no action]
Ref: reservation_rooms.room_id > rooms.id [delete: no action]

Ref: maintenance_requests.requester_id > employee.id [delete: no action]
Ref: maintenance_requests.assignee_id > employee.id [delete: no action]
Ref: maintenance_requests.room_id > rooms.id [delete: no action]

Ref: housekeeping_tasks.employee_id > employee.id [delete: no action]
Ref: housekeeping_tasks.room_id > rooms.id [delete: no action]

Ref: reports.created_by > employee.id [delete: no action]
